added changelog-v1.0.xml and made few changes in repositories